Added fat file build configuration

--- a/pom.xml
+++ b/pom.xml
@@ -79,4 +79,31 @@
             <version>0.16</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>Adressverwaltung</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>adressverwaltung.main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>                        <!-- this is used for inheritance merges -->
+                        <phase>package</phase>                        <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
